--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,13 @@
     "bcrypt": "^0.8.7",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.7.1",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "json-web-token": "^2.0.3",
+    "jsonwebtoken": "^7.0.1",
     "knex": "^0.11.7",
     "liftoff": "^2.2.4",
     "morgan": "~1.6.1",
