--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "node": "6.2.2"
   },
   "scripts": {
-    "start": "node ./server/bin/www"
+    "start": "node ./server/bin/www",
+    "postinstall": "bower install"
   },
   "dependencies": {
     "bcrypt": "^0.8.7",
