--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fleetkeep",
   "version": "0.0.0",
   "private": true,
-  "engines" : {
+  "engines": {
     "node": "6.2.2"
   },
   "scripts": {
@@ -23,6 +23,7 @@
     "liftoff": "^2.2.4",
     "morgan": "~1.6.1",
     "pg": "^6.0.1",
+    "s3-uploader": "^2.0.1",
     "serve-favicon": "~2.3.0"
   }
 }
