--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "liftoff": "^2.2.4",
     "morgan": "~1.6.1",
     "pg": "^6.0.1",
+    "s3-uploader": "^2.0.1",
     "serve-favicon": "~2.3.0"
   }
 }
