--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "knex": "^0.11.7",
     "liftoff": "^2.2.4",
     "morgan": "~1.6.1",
+    "multer": "^1.1.0",
     "pg": "^6.0.1",
     "s3-uploader": "^2.0.1",
     "serve-favicon": "~2.3.0"
