--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node ./server/bin/www"
   },
   "dependencies": {
+    "base64-string-s3": "0.0.1",
     "bcrypt": "^0.8.7",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
