--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "json-web-token": "^2.0.3",
     "jsonwebtoken": "^7.0.1",
     "knex": "^0.11.7",
+    "knox": "^0.9.2",
     "liftoff": "^2.2.4",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
