--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "pg": "^6.0.1",
-    "s3-uploader": "^2.0.1",
-    "serve-favicon": "~2.3.0"
+    "s3-uploader": "^2.0.1"
   }
 }
